# xete-programs

./: .gitignore  LICENSE  README.md  SECURITY.md  SETTLEMENT.md  SPEC.md  TRANSLATION.md
program/lean/: Cargo.toml
program/lean/src/: lib.rs
program/readable/: Cargo.toml
program/readable/src/: lib.rs
swap/: .gitignore  ALIAS_REGISTRY_SPEC.md  Cargo.toml  DEPLOY_RUNBOOK.md  EVENTS.md  README.md  ROYALTY_SPEC.md  TEST_COVERAGE.md  THREAT_MODEL.md
swap/fuzz/: Cargo.toml
swap/fuzz/fuzz_targets/: fuzz_target_1.rs  parse_tm_royalty.rs
swap/sdk/: README.md  mcp_server.py  smoke.py  xete_swap.py
swap/site/: index.html
swap/src/: basket.rs  config.rs  cpi.rs  escrowless.rs  events.rs  lib.rs  mcore.rs  offer.rs  order.rs  pnft.rs  royalty.rs  settle.rs  state.rs  swap.rs
tests/: test_settlement.py
