[package]
name = "xete-swap"
version = "0.1.0"
edition = "2021"
description = "xete-swap — rung 1: atomic SPL-token <-> token settlement (e.g. compute-token <-> USDC). Skunkworks. Native solana-program (review-legible)."
license = "MIT"

[workspace]

[dependencies]
solana-program = "2"
solana-system-interface = "1"
spl-token = { version = "6", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"

# Declared (not enabled) so the entrypoint! macro's `cfg(feature = "custom-…")` checks are known to
# cargo's check-cfg — silences the only build warnings without changing the default heap/panic handlers.
[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
